test/bad/classes/struct11.px

class Test def
    Int n

Test()
